--- a/exercicios/ex015/style.css
+++ b/exercicios/ex015/style.css
@@ -19,6 +19,12 @@ section {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.200);
 }
 
+img {
+    padding: 20px;
+    width: 250px;
+    height: 250px;
+}
+
 footer {
     color: white;
     text-align: center;
